# nothypridle

./: .gitattributes  AGENTS.md  CREDITS.html  Cargo.toml  LICENSE  README.md  about.hbs  about.toml  flake.nix  release-plz.toml
.github/workflows/: ci.yml  packages.yml  release.yml
crates/nh-hal/: CHANGELOG.md  Cargo.toml
crates/nh-hal/src/: resources.rs
crates/nhidle/: CHANGELOG.md  Cargo.toml
crates/nhidle/src/: app.rs  config.rs  dbus.rs  helpers.rs  lib.rs  main.rs  monitor.rs  wayland.rs
crates/nhidle/src/nh_hal/: audio.rs  mod.rs  resources.rs
crates/nhidle/tests/: dbus_hooks.rs  idle_runtime.rs  monitor_inhibit.rs  wayland_resume.rs
