[workspace]
members = ["crates/nhidle"]
resolver = "3"

[workspace.package]
version = "0.0.0"
authors = ["Nikita Goncharov <ininids@ininids.in.rs>"]
edition = "2024"
description = "A Wayland idle management daemon written in Rust, featuring custom configuration via aam-rs and smart inhibitors support."
license = "BSD-3-Clause"
repository = "https://github.com/ininids/nothypridle"
homepage = "https://github.com/ininids/nothypridle"
readme = "README.md"
keywords = ["wayland", "idle", "daemon", "hyprland", "aam-rs"]
categories = ["command-line-utilities"]

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full"] }
wayland-client = "0.31.14"
wayland-protocols = { version = "0.32.13", features = ["staging"] }
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
zbus = "5.17.0"
aam-rs = "2.8.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
sysinfo = "0.39.5"
mpris = "2.1.0"
nvml-wrapper = "0.12.1"

[workspace.lints.rust]
unsafe_code = "warn"
unused_must_use = "deny"
unused_imports = "deny"
unused_variables = "deny"
dead_code = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
await_holding_lock = "warn"
future_not_send = "warn"
large_futures = "warn"
unused_async = "warn"
result_large_err = "warn"

[workspace.metadata.rpm.cargo]
buildflags = ["--release"]

[workspace.metadata.rpm.targets]
nhidle = { path = "/usr/bin/nothypridle" }

[workspace.metadata.rpm]
summary = "A Wayland idle management daemon written in Rust"
description = """
A Wayland idle management daemon featuring custom configuration
via aam-rs and smart inhibitors support (MPRIS, NVML, sysinfo).
"""
