[package]
name = "nh-hal"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
mpris = {workspace = true}
sysinfo = {workspace = true}
tracing = {workspace = true}
nvml-wrapper = {workspace = true}
